[ISSUE-6] feat: Implement the function to extract building search result by CSV file

--- a/view/index.html
+++ b/view/index.html
@@ -152,6 +152,19 @@
             </div>
         </div>
 
+        <!-- Indicator -->
+        <div class="loading-container">
+            <div class="spinner-border text-light" role="status" id="loadingIndicatorSpinner">
+                <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+            </div>
+            <p id="loadingIndicatorTitle">Infinite Loading</p>
+            <p id="loadingIndicatorBody">
+                If this loading screen appears for a long time, please contact the developer.
+                <br />
+                [Menu => Help => About]
+            </p>
+        </div>
+
         <script src="../public/lib/jquery/jquery-3.7.1.min.js"></script>
         <script src="../public/lib/bootstrap/bootstrap.bundle.min.js"></script>
         <script type="module" src="../public/js/index.js"></script>
