--- a/public/css/index.css
+++ b/public/css/index.css
@@ -56,3 +56,40 @@ html, body {
     transform: translateY(-85%);
     padding: 0 12px 12px 12px;
 }
+
+.loading-container {
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    text-align: center;
+}
+
+#loadingIndicatorSpinner {
+    position: absolute;
+    top: -20%;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 32px;
+    height: 32px;
+    margin: auto;
+}
+
+#loadingIndicatorTitle {
+    position: absolute;
+    top: 45%;
+    width: 100%;
+    color: #F8F9FA !important;
+}
+
+#loadingIndicatorBody {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    color: #F8F9FA !important;
+}
