[ISSUE-8] feat: Implement the REST API Key configuration

--- a/view/index.html
+++ b/view/index.html
@@ -135,6 +135,27 @@
             </div>
         </div>
 
+        <div class="modal fade" id="restApiKeyModal" tabindex="-1" aria-labelledby="restApiKeyModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="restApiKeyModalLabel">Input REST API Key</h1>
+                        <button type="button" class="btn-close" aria-label="Close" id="btnRestApiKeyModalClose"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="mb-3">
+                            <label for="inputRestApiKey" class="form-label">REST API Key</label>
+                            <input type="text" name="inputRestApiKey" class="form-control" id="inputRestApiKey" placeholder="REST API Key (Example : a2tzcme9qrphzzpgw0gkj3mv0z06ss73)" />
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" id="btnRestApiKeyModalCancel">Cancel</button>
+                        <button type="button" class="btn btn-primary" id="btnConfirmRestApiKey">Confirm</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="modal fade" id="aboutModal" tabindex="-1" aria-labelledby="aboutModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
             <div class="modal-dialog">
                 <div class="modal-content">
