[ISSUE-12] feat: Implement the accuracy improvement function (Keyword/Category mapping)

--- a/view/index.html
+++ b/view/index.html
@@ -68,20 +68,7 @@
                         <button type="button" class="btn-close" aria-label="Close" id="keywordCategoryRuleModalClose"></button>
                     </div>
                     <div class="modal-body">
-                        <div class="list-group list-group-keyword-category-rule" id="listGroupKeywordCategoryRule">
-                            <div class="list-item-keyword-category-rule">
-                                <button type="button" class="list-group-item list-group-item-action">Factory</button>
-                                <button type="button" class="btn-close icon-remove-keyword-category-rule" aria-label="close"></button>
-                            </div>
-                            <div class="list-item-keyword-category-rule">
-                                <button type="button" class="list-group-item list-group-item-action">Park</button>
-                                <button type="button" class="btn-close icon-remove-keyword-category-rule" aria-label="close"></button>
-                            </div>
-                            <div class="list-item-keyword-category-rule">
-                                <button type="button" class="list-group-item list-group-item-action">Company</button>
-                                <button type="button" class="btn-close icon-remove-keyword-category-rule" aria-label="close"></button>
-                            </div>
-                        </div>
+                        <div class="list-group list-group-keyword-category-rule" id="listGroupKeywordCategoryRule"></div>
                         <div class="d-grid gap-2">
                             <button type="button" class="btn btn-outline-secondary" id="btnNewKeywordCategoryRule">+</button>
                         </div>
